--- a/templates/layout/partials/menu/vertical/vertical_menu.html
+++ b/templates/layout/partials/menu/vertical/vertical_menu.html
@@ -76,6 +76,41 @@
     </li>
     {% endif %}
 
+    {% if user.is_superuser or user.userdosen %}
+    <li class="menu-item {% if 'library' in request.path or 'categories' in request.path %}active open{% endif %}">
+      <a href="javascript:void(0);" class="menu-link menu-toggle">
+        <i class="menu-icon tf-icons ri-book-read-line"></i>
+        <div>Perpustakaan</div>
+      </a>
+      <ul class="menu-sub">
+        <li class="menu-item {% if request.resolver_match.url_name == 'add-book' %}active{% endif %}">
+          <a href="{% url 'add-book' %}" class="menu-link">
+            <div>Koleksi Buku</div>
+          </a>
+        </li>
+          <li class="menu-item {% if request.resolver_match.url_name == 'list-books' %}active{% endif %}">
+          <a href="{% url 'list-books' %}" class="menu-link">
+            <div>List Buku</div>
+          </a>
+        </li>
+        <li class="menu-item {% if request.resolver_match.url_name == 'manage-category' %}active{% endif %}">
+          <a href="{% url 'manage-category' %}" class="menu-link">
+            <div>Kategori Buku</div>
+          </a>
+        </li>
+      </ul>
+    </li>
+    {% endif %}
+
+    {% if user.usermhs %}
+    <li class="menu-item {% if 'library' in request.path %}active{% endif %}">
+      <a href="{% url 'student-library-list' %}" class="menu-link">
+        <i class="menu-icon tf-icons ri-book-read-line"></i>
+        <div>Perpustakaan Digital</div>
+      </a>
+    </li>
+    {% endif %}
+
     {% if user.usermhs %}
     <li class="menu-item {% if request.resolver_match.url_name == 'app-academy-course' %}active{% endif %}">
       <a href="{% url 'app-academy-course' %}" class="menu-link">
